--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -264,6 +264,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tłóčatko šipkoweho kónčka přeco pokazać">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbole">
 <!ENTITY Ctr_hideurlzoom	"Skalowanske tłóčatko schować (jeli eksistuje)">
+<!ENTITY Ctr_urlbardark		"Dark background color">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
