--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -264,6 +264,7 @@
 <!ENTITY Ctr_urlbardropm2	"ドロップマーカーを常に表示する">
 <!ENTITY Ctr_altreaderico	"替わりのリーダーアイコンで置き換える">
 <!ENTITY Ctr_hideurlzoom	"ズームボタンを隠す (表示されている場合)">
+<!ENTITY Ctr_urlbardark		"Dark background color">
 <!ENTITY Ctr_hideprbutton	"ポップアップブロックの通知アイコンを隠す">
 <!ENTITY Ctr_locsearchbw10	"ロケーションバーと検索バーの高さを減らす (実験的)">
 <!ENTITY Ctr_urlbar_ib		"サイト認証ボタン">
