--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -264,6 +264,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tornar marcador sempre visível">
 <!ENTITY Ctr_altreaderico	"Ícones alternativos do 'Leitor'">
 <!ENTITY Ctr_hideurlzoom	"Ocultar botão de zoom (se disponível)">
+<!ENTITY Ctr_urlbardark		"Dark background color">
 <!ENTITY Ctr_hideprbutton	"Ocultar o Ícone de notificação quando um pop-up ficar bloqueado">
 <!ENTITY Ctr_locsearchbw10	"Reduzir altura das barras de localização e barras de pesquisa (experimental)">
 <!ENTITY Ctr_urlbar_ib		"Botão de identidade do site">
