--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -264,6 +264,7 @@
 <!ENTITY Ctr_urlbardropm2	"Rullegardinsmenu-pil altid synlig">
 <!ENTITY Ctr_altreaderico	"Alternative 'Læser'-ikoner">
 <!ENTITY Ctr_hideurlzoom	"Skjul zoom-knap (hvis den er der)">
+<!ENTITY Ctr_urlbardark		"Dark background color">
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en pop-op blokeres">
 <!ENTITY Ctr_locsearchbw10	"Reducér adresselinjers og søgelinjers højde (eksperimentel)">
 <!ENTITY Ctr_urlbar_ib		"Knappen Identitet for websted">
