--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -264,6 +264,7 @@
 <!ENTITY Ctr_urlbardropm2	"Aufklapp-Schaltfläche immer anzeigen">
 <!ENTITY Ctr_altreaderico	"Alternatives Symbol für die 'Lesemodus'-Schaltfläche">
 <!ENTITY Ctr_hideurlzoom	"Zoom-Schaltfläche verstecken (falls vorhanden)">
+<!ENTITY Ctr_urlbardark		"Dunkle Hintergrundfarbe">
 <!ENTITY Ctr_hideprbutton	"'Infosymbol' verstecken (wenn ein Pop-up-Fenster blockiert wurde)">
 <!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
