--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -264,6 +264,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tee rippmenüü avamise nupp alati nähtavaks">
 <!ENTITY Ctr_altreaderico	"Alternatiivsed 'Lugemisvaate' ikoonid">
 <!ENTITY Ctr_hideurlzoom	"Peida suurenduse nupp (kui on)">
+<!ENTITY Ctr_urlbardark		"Dark background color">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_locsearchbw10	"Vähenda asukohariba ja otsinguriba kõrgust (katsejärgus)">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp">
