--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"需要重启 &brandShortName;!">
 <!ENTITY Ctr_window			"window">
 <!ENTITY Ctr_centered		"已居中">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"页面">
 
 <!ENTITY Ctr_cuibuttons		"按钮">
 <!ENTITY Ctr_cuibutnormal	"标准">
@@ -125,8 +125,8 @@
 <!ENTITY Ctr_altoptionsd	"默认外观">
 <!ENTITY Ctr_altoptionsp	"备选的外观">
 <!ENTITY Ctr_altoptionsw	"在窗口中打开选项页面">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"水平菜单">
+<!ENTITY Ctr_altoptions_vm	"垂直菜单">
 <!ENTITY Ctr_altoptionsww	"宽度">
 <!ENTITY Ctr_altoptionswh	"高度">
 <!ENTITY Ctr_altoptionsi	"模拟的选项窗口再也不是一个对话框，而是一个隐藏所有工具栏的“浏览器窗口”。“使用当前页面”功能仅添加在已在当前窗口打开的页面地址，在这种情况下只是“about:preferences”选项。 “选项”工具栏图标被替换为新的，以便于在窗口中打开选项。">
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_urlbardropm2	"下拉按钮总是可见">
 <!ENTITY Ctr_altreaderico	"备选的 “阅读模式” 图标">
 <!ENTITY Ctr_hideurlzoom	"隐藏缩放按钮(如果存在)">
-<!ENTITY Ctr_urlbardark		"Dark background color">
+<!ENTITY Ctr_urlbardark		"深色背景色">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_locsearchbw10	"减小地址栏与搜索栏高度(实验性)">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮">
@@ -360,7 +360,7 @@
 <!ENTITY Ctr_lessaddonsbar	"减少高度">
 <!ENTITY Ctr_addonbarfs		"在全屏模式">
 
-<!ENTITY Ctr_tabthrobber	"Loading image">
+<!ENTITY Ctr_tabthrobber	"正在加载图像">
 <!ENTITY Ctr_bmanimation	"加入书签动画">
 <!ENTITY Ctr_pananimation	"打开面板动画">
 <!ENTITY Ctr_tabanimation	"打开/关闭标签页动画">
